--- a/source-css/mylittlemango.css
+++ b/source-css/mylittlemango.css
@@ -664,3 +664,12 @@ a[href|="/flutterotter"] { background-position: -100px -746px; width: 100px; hei
 a[href|="/rainbowgetithahahaha"] { background-position: -100px -846px; width: 100px; height: 100px; }
 a[href|="/otter"] { background-position: -0px -871px; width: 100px; height: 100px; }
 a[href|="/twiwhuuuuu"] { background-position: -100px -946px; width: 100px; height: 100px; }
+
+a[href|="/horse"] {
+     display: block;
+     clear: none;
+     float: left;
+     background-image: url(%%horse%%) !important
+     }
+
+a[href|="/horse"]  { background-position: -0px -0px; width: 200px; height: 200px; }
