--- a/source-css/mylittlemotorhead.css
+++ b/source-css/mylittlemotorhead.css
@@ -730,6 +730,28 @@ a[href|="/kdanceporsche"] {
 a[href|="/kdanceporsche"] {
     background-position: -234px -145px
     }
+a[href|="/abvette"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 250px;
+    height: 193px;
+    background-image: url(%%mhemotes%%)
+    }
+a[href|="/abvette"] {
+    background-position: -0px -339px
+    }
+a[href|="/rdfsatom"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 250px;
+    height: 130px;
+    background-image: url(%%mhemotes%%)
+    }
+a[href|="/rdfsatom"] {
+    background-position: -250px -289px
+    }
 a[href|="/wfworking"] {
     display: block;
     clear: none;
