--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -1,5 +1,5 @@
-/*
-             @
+/* 
+            @
             @@u
           J@. @
          @@   @u           i21PMMOG8ui
@@ -65,8 +65,6 @@
                                           rS@@v,@u ,:::::: @O ::::::::,,@,,:::,. @7.7UN@@J
                                               :U@ZSur:,... E8 ....,,... OS ,:rjFF@@q5v: 
                                                    .rUuLJYiG8i77777r777;PO7u2L,.                      http://fav.me/d6kc256
-
-RainbowCrash, don't touch ASCII Derpy!
 */
 
 /* CSS last generated on Sat, 16 Feb 2013 02:05:57 -0600 by UNKNOWN on derpy */
@@ -86,6 +84,8 @@ div.titlebox .users-online span.number:after {content:" Learning about Friendshi
  height:22px!important;
  width:245px!important
 }
+
+div.over18 .entry .buttons .first{padding-left: 0px}
 
 #searchexpando.infobar 
 {
@@ -147,7 +147,6 @@ border-top-right-radius: 5px;
  content:"message the mods"
 }
 
-.sidecontentbox ul.content li.more{display:none}
 #header-img
 {
  margin:0px 5px -12px 0px;
@@ -199,13 +198,13 @@ border-top-right-radius: 5px;
 {
  display:inline-block;
  float:right;
- background:url(%%derpy-hat%%);
- width:60px;
- height:60px;
- margin-top:-30px;
+ background:url(%%twilight-smile-hat%%);
+ width:70px;
+ height:70px;
+ margin-top:-45px;
  margin-left:3px;
  margin-bottom:0px;
- margin-right:-40px;
+ margin-right:-45px;
 }
 
 .thumbnail:empty{background-image:url(%%thumbnails%%)!important}
