--- a/source-css/mylittlefortress.css
+++ b/source-css/mylittlefortress.css
@@ -223,6 +223,12 @@ a.author[href$="Dr_Gordon_Voteman"] {visibility:hidden; font-size:0;}
 a.author[href$="Dr_Gordon_Voteman"]:after {
     visibility:visible; font-size: 12px; color: #f37b21; content: "Dr. Gordon Voteman"
 }
+
+a.author[href$="An_Emo_Dinosaur"] {visibility:hidden; font-size:0;}
+a.author[href$="An_Emo_Dinosaur"]:after {
+    visibility:visible; font-size: 12px; content: "A_Pathetic_Troll" 
+}
+
 .sidecontentbox a.author[href$="/Dr_Gordon_Voteman"] {
     display: none
 }
