--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -231,7 +231,7 @@ a[href|="/cadface"], a[href|="/apathiablankstare"]
 {background-image:url(%%100x100a%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
-a[href|="/tuxpony"], a[href|="/chibiluna"]
+a[href|="/tuxpony"], a[href|="/chibiluna"], a[href|="/shiningcadancehug"]
 {background-image:url(%%150x150a%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -244,16 +244,20 @@ a[href|="/pinkieplease"], a[href|="/twispike"]
 
 /* Misfits a */
 a[href|="/fillycadance"], a[href|="/lyratonguebite"], a[href|="/buttonsmom"], a[href|="/buttonsmum"], a[href|="/fabpie"], a[href|="/changelinghug"], a[href|="/twiembarrassed"],
-a[href|="/twismirk"], a[href|="/huglife"], a[href|="/happyderp"]
+a[href|="/twismirk"], a[href|="/huglife"], a[href|="/happyderp"], a[href|="/speakingfancy"]
 {background-image:url(%%misfitsa%%);display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
 a[href|="/cadface"], a[href|="/pinkieplease"], a[href|="/regret"], a[href|="/apathiasquint"], a[href|="/tuxpony"]
 {background-position: 0 0;}
 
-/* Gird pos 1,0 'motes */
+/* Grid pos 1,0 'motes */
 a[href|="/twispike"], a[href|="/pinkiemail"], a[href|="/chibiluna"], a[href|="/apathiablankstare"]
 {background-position: -100% 0%;}
+
+/* Grid pos 2,0 'motes */
+a[href|="/shiningcadancehug"]
+{background-position: -200% 0%;}
 
 /* Misfits and animated emotes */
 a[href|="/moofintezzter"], a[href|="/muffintester"] {background: url(%%muffintester%%) no-repeat;width:200px;height:177px;display:block;float:left;}
@@ -271,3 +275,4 @@ a[href|="/rddealwithit"] {background-image: url(%%rddealwithit%%);width:150px;he
 a[href|="/twismirk"] {width:253px;height:150px;background-position: -113px -365px;}
 a[href|="/huglife"] {width:150px;height:200px;background-position: 0 -515px;}
 a[href|="/happyderp"] {width:150px;height:235px;background-position: 0 -715px;}
+a[href|="/speakingfancy"] {width:250px;height:178px; background-position: -150px -515px;}
