--- a/source-css/mylittlemango.css
+++ b/source-css/mylittlemango.css
@@ -10,7 +10,7 @@ Added emotes (1/15/13)
 /* Header */
 
  #header #header-bottom-left {
-   background: url(%%mlmbackgroundcomic%%) !important;
+   background: url(%%mlmbannerthingie%%) !important;
    background-repeat: no-repeat !important;
    background-position: 50% 100% !important;
    height: 200px; 
@@ -53,11 +53,12 @@ Added emotes (1/15/13)
 }
 
 */
+/* Comic Sans MC
 
     body {
     font-family:"Comic Sans MS", "Comic Sans";
     }
-
+*/
 
 /*body
 {
@@ -91,7 +92,7 @@ body:first-of-type, body.res-nightmode:first-of-type {
     background:  url(%%background1%%)  no-repeat  fixed 50% 65% !important;
 } */
 
-body{background:url(%%mangobackground%%) no-repeat fixed center center!important}
+body{background:url(%%background%%) no-repeat fixed center center!important}
 .res-nightmode .content{background-color:transparent!important}
 .res-nightmode{background-color:transparent !important}
 .content .md h1{color:#789922;border-bottom:none;padding-bottom:0px}
