--- a/source-css/speedingturtle.css
+++ b/source-css/speedingturtle.css
@@ -390,6 +390,14 @@ a[href|="/rainbee"] {
 	height: 76px;
 }
 
+a[href|="/butt"]{
+width:118px;
+height:111px;
+display: block;
+background-image: url(%%butt%%);
+float: left
+}
+
 a[href|="/twilightdansen"],a[href|="/twidansen"]{
 width:300px;
 height:300px;
