--- a/source-css/berrytubelounge.css
+++ b/source-css/berrytubelounge.css
@@ -155,7 +155,7 @@ visibility:visible!important;
 /* Replacement goes here */
 a.author[href$="31eipekili"]:before { content:"BATMAN" }
 a.author[href$="GreyMage"]:before { content:"Cades" }
-a.author[href$="Quakerlock"]:before { content:"PobodysNerfect" }
+a.author[href$="Quakerlock"]:before { content:"Ataris" }
 a.author[href$="_Blueshift"]:before { content:"blueshift" }
 a.author[href$="LavenderExtract"]:before { content:"Lavender" }
 a.author[href$="di_zz"]:before { content:"dizz" }
